--- a/login/templates/base.html
+++ b/login/templates/base.html
@@ -31,10 +31,10 @@
             </li>
             {% if user.is_authenticated %}
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'profile' %}">About Us</a>
+              <a class="nav-link" href="{% url 'about' %}">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#" id="navbarDropdown" role="button" 
+              <a class="nav-link" href="{% url 'contactUs' %}" id="navbarDropdown" role="button" 
                 aria-haspopup="true" aria-expanded="false">
                 Contact
               </a>
